force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <label>Expense Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>