force-app/main/default/objects/Expense__c/fields/Custom_id__c.field-meta.xml
<CustomField>
    <fullName>Custom_id__c</fullName>
    <externalId>true</externalId>
    <label>Custom_id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>