force-app/main/default/objects/Expense__c/fields/Some_cool_field__c.field-meta.xml
<CustomField>
    <fullName>Some_cool_field__c</fullName>
    <label>Some cool field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>