force-app/main/default/objects/Expense__c/fields/Somethingato__c.field-meta.xml
<CustomField>
    <fullName>Somethingato__c</fullName>
    <description>Very nice</description>
    <label>Somethingato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borat</fullName>
                <default>true</default>
                <label>Borat</label>
            </value>
            <value>
                <fullName>Sagdyiev</fullName>
            </value>
            <value>
                <fullName>Azamat</fullName>
            </value>
            <value>
                <fullName>Bagatov</fullName>
            </value>
            <value>
                <fullName>You</fullName>
            </value>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Get</fullName>
            </value>
            <value>
                <fullName>This</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>