force-app/main/default/objects/Expense__c/validationRules/Rule_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_Name</fullName>
    <active>true</active>
    <description>Ensures that the Amount is greater than 0.</description>
    <errorConditionFormula>Currency__c  &lt;= 0</errorConditionFormula>
    <errorMessage>You idiot! Can&apos;t be smaller that 0...</errorMessage>
</ValidationRule>